fixed arrows on mobile

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,22 +1,23 @@
+* {
+  touch-action: manipulation;
+  user-select: none;
+}
 h1 {
   font-family: Arial, Helvetica, sans-serif;
-}
-span {
-  padding: 0;
 }
 #home-container {
   text-align: center;
 }
 #nameDiv {
-  display:block;
   width:100%;
   height:70px;
   padding-bottom: 5px;
-
 }
 
 .name {
   padding-top: 50px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
 .underline {
   width: 150px;
@@ -27,11 +28,16 @@ span {
 }
 #gen-button-div {
   margin-top: 300px;
+  vertical-align: middle;
 }
 .prevButton, .nextButton {
-  margin-left: 50px;
-  margin-right: 50px;
   padding:5px;
+}
+.prevButton {
+  margin-right: 50px;
+}
+.nextButton {
+  margin-left: 50px;
 }
 .nextImg, .prevImg {
   height: 30px;
